# ChessMate

./: .gitignore  README.md  chess.service  pyproject.toml
Core/Inc/: chess.h  main.h
Core/Src/: chess.c  main.c  stm32l4xx_hal_msp.c
LCD_test/: button.py  test.py
ReactUI/: commit.ps1
React_UI/: app.py  commit.ps1  game_history.csv  package.json  send_challenge.py  testy.py
React_UI/app/: NavBar.tsx
autoMate/: game_history.csv  package-lock.json  send_challenge.py
chessApp/: .env  RPi_I2C_driver.py  app.py  board_detection.py  chess_board.py  lichess_api.py  manual_square_find.py  my_token.py  read_board.py  requirements.txt  square_occupancy.py  trolley.py
chessApp/TMC2209/: multiple_drivers.py  trolley.py
chessApp/motor/: _TMC_2209_move.py  multiple_drivers.py  stall.py  test_threshold.py
chessApp/src/: trolley.c  trolley.h
chessApp/static/: styles.css
chessBoardGUI/: app.js
chessBoard_GUI/: index.html  output.csv
chessPieceDetection/: board_state_tracker.py  cameraTest.py  chessboardDetection.py  chessboardWarpFixed.py  chessboard_calibration  chessboard_calibration.py  hough.py  hsv_mask_helper.py  manual_square_find.py  manual_square_find_v2.py  points.json  square_callibration.py  square_occupancy.py  square_occupancy_v2.py
chessPieceMovement/: Makefile  crazy  crazy.c  magnet  magnet.c  smartGUI.c  test.c  trolley  trolley.c
chessPiece_Detection/: chessboardDetection.py
chessUI/: Chess.css  Chess.js  data_scrapper - Copy.py  data_scrapper.py  game_history.csv  index.html  moves.txt
restAPI/: requirements.txt  setup.py
(+19 files in other folders)
